--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-maps": "^1.24.13",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
