--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.4",
     "@react-navigation/native": "^7.1.16",
@@ -18,7 +19,9 @@
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.24.13",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
