--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+    
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     
 
     <application
@@ -31,5 +33,7 @@
       <meta-data   
           android:name="com.google.android.geo.API_KEY"
           android:value="AIzaSyANFonfCfREwHwLpyRYcZieozcEqTFGYyE"/> 
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
     </application>
 </manifest>
