--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/slider": "^4.5.7",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.4",
     "@react-navigation/native": "^7.1.16",
@@ -23,6 +24,7 @@
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.24.13",
     "react-native-permissions": "^5.4.2",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
