--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-maps": "^1.24.13",
     "react-native-permissions": "^5.4.2",
     "react-native-progress": "^5.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
@@ -48,6 +49,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "jetifier": "^2.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
