--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native/new-app-screen": "0.80.2",
@@ -29,7 +30,9 @@
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
+    "react-native-sound": "^0.12.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.16.1",
     "react-native-worklets": "^0.4.1",
     "react-redux": "^9.2.0"
   },
