--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.24.13",
