--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,17 +91,23 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-        }
+            }
+        release {
+            storeFile file("my-release-key.keystore")
+            storePassword "koppe123"
+            keyAlias "gpsalarmkey"
+            keyPassword "koppe123"
+            }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
+            
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
